fix: Removed vh units causing overflow & footer issues.

--- a/src/scss/components/_sidebar_and_content_grid_container.scss
+++ b/src/scss/components/_sidebar_and_content_grid_container.scss
@@ -3,7 +3,6 @@ main.sidebar_and_content {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 div.larrymg_me--grid_container--sidebar_and_content {
